@@ -157,9 +157,42 @@ $args = array($doctypes, $unixfrom, $unixto);
 
 $taxes = $DB->GetAllByKey('SELECT id, value, label, taxed FROM taxes', 'id');
 
-$documents = $DB->GetAll('SELECT d.id, d.type
+$documents = $DB->GetAll('SELECT d.id, d.type,
+            cn.name AS country, n.template,
+            a.state AS rec_state, a.state_id AS rec_state_id,
+            a.city as rec_city, a.city_id AS rec_city_id,
+            a.street AS rec_street, a.street_id AS rec_street_id,
+            a.zip as rec_zip, a.postoffice AS rec_postoffice,
+            a.name as rec_name, a.address AS rec_address,
+            a.house AS rec_house, a.flat AS rec_flat, a.country_id AS rec_country_id,
+            c.pin AS customerpin, c.divisionid AS current_divisionid,
+            c.street, c.building, c.apartment,
+            (CASE WHEN d.post_address_id IS NULL THEN c.post_street ELSE a2.street END) AS post_street,
+            (CASE WHEN d.post_address_id IS NULL THEN c.post_building ELSE a2.house END) AS post_building,
+            (CASE WHEN d.post_address_id IS NULL THEN c.post_apartment ELSE a2.flat END) AS post_apartment,
+            (CASE WHEN d.post_address_id IS NULL THEN c.post_name ELSE a2.name END) AS post_name,
+            (CASE WHEN d.post_address_id IS NULL THEN c.post_address ELSE a2.address END) AS post_address,
+            (CASE WHEN d.post_address_id IS NULL THEN c.post_zip ELSE a2.zip END) AS post_zip,
+            (CASE WHEN d.post_address_id IS NULL THEN c.post_city ELSE a2.city END) AS post_city,
+            (CASE WHEN d.post_address_id IS NULL THEN c.post_postoffice ELSE a2.postoffice END) AS post_postoffice,
+            (CASE WHEN d.post_address_id IS NULL THEN c.post_countryid ELSE a2.country_id END) AS post_countryid,
+            cp.name AS post_country,
+            (CASE WHEN d.div_countryid IS NOT NULL
+                THEN (CASE WHEN d.countryid IS NULL
+                    THEN cdv.ccode
+                    ELSE cn.ccode
+                END)
+                ELSE NULL
+            END) AS lang
 	    FROM documents d
-	    LEFT JOIN numberplans n ON d.numberplanid = n.id' .
+        JOIN customeraddressview c ON (c.id = d.customerid)
+        LEFT JOIN countries cn ON (cn.id = d.countryid)
+        LEFT JOIN countries cdv ON cdv.id = d.div_countryid
+        LEFT JOIN numberplans n ON (d.numberplanid = n.id)
+        LEFT JOIN vaddresses a ON d.recipient_address_id = a.id
+        LEFT JOIN vaddresses a2 ON d.post_address_id = a2.id
+        LEFT JOIN countries cp ON (d.post_address_id IS NOT NULL AND cp.id = a2.country_id) OR (d.post_address_id IS NULL AND cp.id = c.post_countryid)
+	    ' .
         ( $ctype != -1 ? ' LEFT JOIN customers cu ON d.customerid = cu.id ' : '' )
         . ' WHERE cancelled = 0 AND d.type IN ? AND (' . $wherecol . ' BETWEEN ? AND ?) '
         .(isset($numberplans) ? 'AND d.numberplanid IN (' . $numberplans . ')' : '')
@@ -180,7 +213,7 @@ if ($documents) {
         switch ($doctype) {
             case DOC_INVOICE:
             case DOC_CNOTE:
-                $document = $LMS->GetInvoiceContent($idx);
+                $document = array_merge($document, $LMS->GetInvoiceContent($idx, true));
                 break;
             case DOC_DNOTE:
                 $document = $LMS->GetNoteContent($idx);
